fix: preserve scan archive replacement contract